--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8630b3db",
+   "id": "189cec61",
    "metadata": {},
    "outputs": [
     {
@@ -20,6 +20,7 @@
     }
    ],
    "source": [
+    "import towhee\n",
     "from data import source\n",
     "towhee.read_csv(source).show()"
    ]
@@ -27,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "24c8ecb1",
+   "id": "c286035d",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7351daa",
+   "id": "2fc1214d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -61,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5950d1b5",
+   "id": "adf8a7f2",
    "metadata": {},
    "outputs": [],
    "source": []
