--- a/build.ipynb
+++ b/build.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "86017f91",
+   "id": "53d772d4",
    "metadata": {},
    "source": [
     "# Showcase using Gradio - Reverse image search\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "137fb2a8",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "091b63e7",
    "metadata": {},
    "outputs": [
@@ -46,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860/\n",
-      "Running on public URL: https://35184.gradio.app\n",
+      "Running on local URL:  http://127.0.0.1:7861/\n",
+      "Running on public URL: https://33722.gradio.app\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting, check out Spaces: https://huggingface.co/spaces\n"
      ]
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://35184.gradio.app\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://33722.gradio.app\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -67,12 +67,12 @@
     {
      "data": {
       "text/plain": [
-       "(<gradio.routes.App at 0x1634c2eca30>,\n",
-       " 'http://127.0.0.1:7860/',\n",
-       " 'https://35184.gradio.app')"
+       "(<gradio.routes.App at 0x1635dbc1d90>,\n",
+       " 'http://127.0.0.1:7861/',\n",
+       " 'https://33722.gradio.app')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
